<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_popular" />
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_trend" />
        <item android:id="@+id/nav_save"
            android:icon="@drawable/ic_baseline_save_alt_24"
            android:title="@string/saved"/>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/login" />
    </group>
</menu>