<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cleanarchitecturemvvm.presentation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_popular"
        android:name="com.example.cleanarchitecturemvvm.presentation.ui.popular.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/nav_trending"
        android:name="com.example.cleanarchitecturemvvm.presentation.ui.trend.TrendFragment"
        android:label="@string/menu_trend"
        tools:layout="@layout/fragment_trend" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.cleanarchitecturemvvm.presentation.ui.detail.DetailFragment"
        android:label="detail_fragment"
        tools:layout="@layout/detail_fragment" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.cleanarchitecturemvvm.presentation.ui.auth.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
</navigation>