<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_trailer_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/add_trailer_link"
        android:paddingStart="10dp" />
    <EditText
        android:id="@+id/edt_add_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/add_download_link"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/edt_add_link1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_download_link"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/edt_add_link2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_download_link"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp" />
    <Button
        android:id="@+id/upload_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        />


</LinearLayout>