<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.example.cleanarchitecturemvvm.presentation.presenter.MoviePresenter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".presentation.ui.home.HomeFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorRed"
                app:expandedTitleMarginBottom="20dp"
                app:expandedTitleMarginStart="15dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/latest_image"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/db"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <!-- <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top|right"
                     android:layout_marginEnd="10dp"
                     android:text="Latest Movie"
                     android:textColor="@color/cardview_dark_background"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0.7" />-->
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="64dp"
            android:layout_weight="1"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/trending_movie"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_trend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:clipToPadding="false"
                    tools:itemCount="1"
                    tools:listitem="@layout/movie_item" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/movie_type"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/menu_popular"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movie_page"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:layout_margin="8dp"
                        android:text="@string/menu_popular"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:clipToPadding="false"
                    tools:itemCount="1"
                    tools:listitem="@layout/movie_item" />
            </LinearLayout>

            <!-- <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/bookmarksRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 app:layoutManager="LinearLayoutManager"
                 />-->
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            app:behavior_hideable="false"
            app:behavior_peekHeight="64dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorDark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tabMovie"
                    style="@style/Widget.MajesticReader.Tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/text_link_selector_bg"
                    android:text="@string/movie"
                    app:drawableTopCompat="@drawable/ic_baseline_movie_24" />

                <TextView
                    android:id="@+id/tabTvShow"
                    style="@style/Widget.MajesticReader.Tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/text_link_selector_bg"
                    android:text="@string/tv_shows"
                    app:drawableTopCompat="@drawable/ic_screenplay" />

                <TextView
                    android:id="@+id/tabPreviousPage"
                    style="@style/Widget.MajesticReader.Tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/text_link_selector_bg"
                    android:text="@string/previous"
                    app:drawableTopCompat="@drawable/ic_previous_page" />

                <TextView
                    android:id="@+id/tabNextPage"
                    style="@style/Widget.MajesticReader.Tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/text_link_selector_bg"
                    android:text="@string/next"
                    app:drawableTopCompat="@drawable/ic_baseline_navigate_next_24" />

            </LinearLayout>
        </LinearLayout>

        <iammert.com.view.scalinglib.ScalingLayout
            android:id="@+id/scalingLayout"
            android:layout_width="56dp"
            android:layout_height="65dp"
            android:clickable="true"
            android:stateListAnimator="@animator/sl_state_animator"
            app:elevation="6dp"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|right|end"
            app:pressedTranslationZ="12dp"
            app:radiusFactor="1"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorRed">

                <ImageView
                    android:id="@+id/fabIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_sort_24" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/colorRed"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <RadioButton
                        android:id="@+id/radioPop"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="@{(v)->presenter.onClick()}"
                        android:text="@string/menu_popular"
                        android:textColor="@color/colorWhite" />

                    <RadioButton
                        android:id="@+id/radioNow"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="@{(v)->presenter.onClick()}"
                        android:text="@string/now_playing"
                        android:textColor="@color/colorWhite" />

                    <RadioButton
                        android:id="@+id/radioUp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="@{(v)->presenter.onClick()}"
                        android:text="@string/upcoming"
                        android:textColor="@color/colorWhite" />

                    <RadioButton
                        android:id="@+id/radioTop"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="@{(v)->presenter.onClick()}"
                        android:text="@string/top_rated"
                        android:textColor="@color/colorWhite" />
                </RadioGroup>

            </RelativeLayout>

        </iammert.com.view.scalinglib.ScalingLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>